package vn.edu.phenikaa.courseregistration.repository;

public class CourseRepository {
}
